--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,7 +35,7 @@
 			work correctly both with client-side routing and a non-root public URL.
 			Learn how to configure a non-root public URL by running `npm run build`.
 		-->
-		<title>Puppers paradise</title>
+		<title>Classroom Pickup</title>
 		<script id="react-dotenv" src="./env.js"></script>
 	</head>
 	<body>
